Changed the animation of other section

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -6,6 +7,7 @@
     <link rel="stylesheet" href="index.css">
 
 </head>
+
 
 <body>
     <header class="header">
