Changed the name of class of downarrow

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="role">I am a <span class="roleName">UI Developer</span></div>
             <div class="bounce">
                 <a href="#about">
-                    <img width="40" height="40" class="DownArrow" alt="DownArrow" src="downarrow.png" />
+                    <img width="40" height="40" class="downArrow" alt="DownArrow" src="downarrow.png" />
                 </a>
 
             </div>
