Changed the name of classes

--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
     </header>
     <section class="section">
         <div class="home" id="home">
-            <div class="preName">HEY! I AM</div>
+            <div class="pre-name">HEY! I AM</div>
             <div class="name">Rupesh Prajapati</div>
-            <div class="role">I am a <span class="roleName">UI Developer</span></div>
+            <div class="role">I am a <span class="role-name">UI Developer</span></div>
             <div class="bounce">
                 <a href="#about">
-                    <img width="40" height="40" class="downArrow" alt="DownArrow" src="downarrow.png" />
+                    <img width="40" height="40" class="down-arrow" alt="DownArrow" src="downarrow.png" />
                 </a>
 
             </div>
         </div>
         <div class="about" id="about">
             <div class="about-left-container">
-                <div class="aboutText">
+                <div class="about-text">
                     About me
                 </div>
                 <div class="description">
@@ -55,7 +55,7 @@
 
             <div class="about-right-container">
                 <div class="card">
-                    <div class="myImage">
+                    <div class="my-image">
                     </div>
                 </div>
             </div>
