--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="home" id="home">
             <div class="pre-name">HEY! I AM</div>
             <div class="name">Rupesh Prajapati</div>
-            <div class="role">I am a <span class="role-name">UI Developer</span></div>
+            <div class="role">I am a <span class="role-name">Software Developer</span></div>
             <div class="bounce">
                 <a href="#about">
                     <img width="40" height="40" class="down-arrow" alt="DownArrow" src="downarrow.png" />
@@ -39,10 +39,10 @@
                     About me
                 </div>
                 <div class="description">
-                    <div class="description-points">A UI developer who is not limited to front end only also capable of
+                    <div class="description-points">A Software developer who is not limited to front end only also capable of
                         coding in backend technologies.Able
                         to create a fully
-                        responsive web application from scratch and at a same time can write optimized back end codes.
+                        responsive web application from scratch and at a same time can write back end codes as well.
                     </div>
                     <div class="description-points">Professionally connected with Atos Syntel for two years.</div>
                     <div class="description-points">Self motivated person, problem solver, independent employee with
@@ -86,7 +86,7 @@
                         <div class="reactbar progress-bar react"></div>
                     </div>
                     <div class="skill-name">
-                        <div>Dot Net Technology(C#, DotNet Core, Web API)</div>
+                        <div>Dot Net Technology(C#, Web API, Entity Framework)</div>
                         <div>50%</div>
                     </div>
                     <div class="bar">
