--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     </div>
                     <div class="description-points">
                         I also have interest in Backend technologies, and currently working in Dot Net technologies like
-                        DotNet Core, Web API, SQL Server.
+                        C#, Web API, SQL Server.
                     </div>
                     <div class="description-points">
                         To enhance my problem solving skills, I also do programming in various competitive programming
