About section changes

--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
                     About me
                 </div>
                 <div class="description">
-                    <div class="description-points">A Software developer who is not limited to front end only also capable of
-                        coding in backend technologies.Able
+                    <div class="description-points">A Software developer who is specialized in front end technology with good exposure to backend technologies.Able
                         to create a fully
                         responsive web application from scratch and at a same time can write back end codes as well.
                     </div>
