--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                     About me
                 </div>
                 <div class="description">
-                    <div class="description-points">A Software developer who is specialized in front end technology with good exposure to backend technologies.Able
+                    <div class="description-points">A Frontend developer who is specialized in front end technology with hands-on experience in backend technologies.Able
                         to create a fully
-                        responsive web application from scratch and at a same time can write back end codes as well.
+                        responsive web application from scratch and at a same time can write efficient codes as well.
                     </div>
-                    <div class="description-points">Professionally connected with Atos Syntel for two years.</div>
+                    <div class="description-points">Professionally connected with Atos Syntel for two years and having 2.6 years of overall experience.</div>
                     <div class="description-points">Self motivated person, problem solver, independent employee with
                         high attention to detail. Fan of
                         Bollywood, outdoor activities,TV series.</div>
@@ -79,21 +79,21 @@
                     </div>
                     <div class="skill-name">
                         <div>React</div>
-                        <div>60%</div>
+                        <div>70%</div>
                     </div>
                     <div class="bar">
                         <div class="reactbar progress-bar react"></div>
                     </div>
                     <div class="skill-name">
-                        <div>Dot Net Technology(C#, Web API, Entity Framework)</div>
-                        <div>50%</div>
+                        <div>Redux</div>
+                        <div>60%</div>
                     </div>
                     <div class="bar">
                         <div class="dotnetbar progress-bar dotnet"></div>
                     </div>
                     <div class="skill-name">
-                        <div>SQL Server</div>
-                        <div>65%</div>
+                        <div>Webpack</div>
+                        <div>60%</div>
                     </div>
                     <div class="bar">
                         <div class="sqlbar progress-bar sql"></div>
