--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         <div class="home" id="home">
             <div class="pre-name">HEY! I AM</div>
             <div class="name">Rupesh Prajapati</div>
-            <div class="role">I am a <span class="role-name">Software Developer</span></div>
+            <div class="role">I am a <span class="role-name">Frontend Developer</span></div>
+            <div class="role">Currently looking for oppurtunities in Frontend/UI development</div>
             <div class="bounce">
                 <a href="#about">
                     <img width="40" height="40" class="down-arrow" alt="DownArrow" src="downarrow.png" />
