progress bar changes

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
             <div class="pre-name">HEY! I AM</div>
             <div class="name">Rupesh Prajapati</div>
             <div class="role">I am a <span class="role-name">Frontend Developer</span></div>
-            <div class="role">Currently looking for oppurtunities in Frontend/UI development</div>
             <div class="bounce">
                 <a href="#about">
                     <img width="40" height="40" class="down-arrow" alt="DownArrow" src="downarrow.png" />
@@ -90,14 +89,14 @@
                         <div>60%</div>
                     </div>
                     <div class="bar">
-                        <div class="dotnetbar progress-bar dotnet"></div>
+                        <div class="dotnetbar progress-bar redux"></div>
                     </div>
                     <div class="skill-name">
                         <div>Webpack</div>
                         <div>60%</div>
                     </div>
                     <div class="bar">
-                        <div class="sqlbar progress-bar sql"></div>
+                        <div class="sqlbar progress-bar webpack"></div>
                     </div>
                 </div>
             </div>
